crates/cribo/tests/snapshots/bundled_code@symbol_collision_inheritance.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/symbol_collision_inheritance/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        if getattr(module, '_cribo_machinery_loaded', False):
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__dict__.clear()
            module.__dict__.update(state)
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('auth_module', None, None, False, {'AuthBase': 'AuthBase', 'HTTPBasicAuth': 'HTTPBasicAuth_2', 'HTTPProxyAuth': 'HTTPProxyAuth', 'make_auth': 'make_auth'})
_cribo_finder.register('colliding_module', None, None, False, {'HTTPBasicAuth': 'HTTPBasicAuth_1'})
auth_module = _cribo.types.SimpleNamespace(__name__='auth_module', __doc__='Module with classes that will have naming collision.')
"""Module with classes that will have naming collision."""
class AuthBase:
    """Base authentication class."""

    def __init__(self):
        self.type = "base"

    def __repr__(self):
        return f"<{self.__class__.__name__}>"
AuthBase.__module__ = 'auth_module'
class HTTPBasicAuth_2(AuthBase):
    """Basic HTTP authentication."""

    def __init__(self, username, password):
        super().__init__()
        self.username = username
        self.password = password
        self.type = "basic"

    def __repr__(self):
        return f"<HTTPBasicAuth user={self.username}>"
HTTPBasicAuth_2.__module__ = 'auth_module'
HTTPBasicAuth_2.__name__ = 'HTTPBasicAuth'
HTTPBasicAuth_2.__qualname__ = 'HTTPBasicAuth'
class HTTPProxyAuth(HTTPBasicAuth_2):
    """Proxy HTTP authentication - inherits from HTTPBasicAuth."""

    def __init__(self, username, password):
        super().__init__(username, password)
        self.type = "proxy"

    def __repr__(self):
        return f"<HTTPProxyAuth user={self.username}>"
HTTPProxyAuth.__module__ = 'auth_module'
def make_auth(auth_type, username, password):
    """Factory function that uses the classes."""
    if auth_type == "basic":
        return HTTPBasicAuth_2(username, password)
    elif auth_type == "proxy":
        return HTTPProxyAuth(username, password)
    else:
        return AuthBase()
make_auth.__module__ = 'auth_module'
auth_module.AuthBase = AuthBase
auth_module.HTTPBasicAuth = HTTPBasicAuth_2
auth_module.HTTPProxyAuth = HTTPProxyAuth
auth_module.make_auth = make_auth
colliding_module = _cribo.types.SimpleNamespace(__name__='colliding_module', __doc__='Another module that exports HTTPBasicAuth to create a collision.')
"""Another module that exports HTTPBasicAuth to create a collision."""
class HTTPBasicAuth_1:
    """Different implementation of HTTPBasicAuth to create collision."""

    def __init__(self, token):
        self.token = token
        self.type = "token"

    def __repr__(self):
        return f"<HTTPBasicAuth(token) token={self.token[:4]}...>"
HTTPBasicAuth_1.__module__ = 'colliding_module'
HTTPBasicAuth_1.__name__ = 'HTTPBasicAuth'
HTTPBasicAuth_1.__qualname__ = 'HTTPBasicAuth'
colliding_module.HTTPBasicAuth = HTTPBasicAuth_1
"""Test symbol collision with class inheritance."""
HTTPBasicAuth = auth_module.HTTPBasicAuth
proxy_auth = HTTPProxyAuth("user", "pass")
print(f"Created HTTPProxyAuth: {proxy_auth}")
print(f"HTTPProxyAuth.__bases__: {HTTPProxyAuth.__bases__}")
auth = make_auth("proxy", "user2", "pass2")
print(f"Factory created auth: {auth}")
print("✓ All tests passed")
